=== master

* Deprecate Model.serialized_columns in the serialization plugin (jeremyevans)

* Deprecate Model.cti_columns in the class_table_inheritance plugin (jeremyevans)

* Deprecate SQL::AliasedExpression#aliaz, use #alias instead (jeremyevans)

* Deprecate SQL::Function#f, use #name instead (jeremyevans)

* Deprecate treating cross join with conditions as inner join on MySQL (jeremyevans)

* Deprecate ConnectionPool#created_count, use #size instead (jeremyevans)

* Deprecate ConnectionPool::CONNECTION_POOL_MAP, use the :pool_class option to specify a non-default connection pool (jeremyevans)

* Deprecate Sequel::IBMDB::Connection#prepared_statements= in the ibmdb adapter (jeremyevans)

* Deprecate DEFAULT_OPTIONS in validation_helpers, override default_validation_helpers_options private method instead (jeremyevans)

* Deprecate model association before callbacks returning false to cancel the action (jeremyevans)

* Support native offset syntax on Oracle 12 (timon) (#1397)

* Deprecate Dataset#nullify in the null_dataset extension (jeremyevans)

* Deprecate Dataset#autoid=, #_fetch=, and #numrows= in the mock adapter (jeremyevans)

* Deprecate loading plugins by requiring sequel_#{plugin} (jeremyevans)

* Add Model.sti_class_from_sti_key in the single_table_inheritance plugin to get the appropriate class to use (Aryk) (#1396)

* Make Sequel::Error#cause use #wrapped_exception if it exists on ruby 2.1+ (jeremyevans)

* Make Dataset#where_all, #where_each, #where_single_value core dataset methods instead of just model dataset methods (jeremyevans)

* Make Database#extend_datasets and Dataset#with_extend now use a Dataset::DatasetModule instance if given a block (jeremyevans)

* Add Sequel::Dataset::DatasetModule, now a superclass of Sequel::Model::DatasetModule (jeremyevans)

* Make composition plugin with :mapping option work correctly if Model#get_column_value is overridden (jeremyevans)
